--- a/Pari e Dispari/index.html
+++ b/Pari e Dispari/index.html
@@ -7,7 +7,7 @@
   <title>Pari e Dispari</title>
 </head>
 <body>
-  
+  <h1 id="gioco"></h1>
   <script src="js/script.js"></script>
 </body>
 </html>
